2024-02-25  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tiff.c: Do not copy TIFFTAG_ORIENTATION from EXIF.
	It is already handled by image->orientation variable.

2024-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (WriteTGAImage): Eliminate compiler warnings.

2024-02-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tga.c: Propagate orientation in TGA writer.
	The linescan order must be reverted.

2024-02-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/configure/configure.rc: Disable static single threaded
	runtime choice. This runtime is not suported in Visual Studio 2008
	and all newer versions.

2024-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c: If module gets built, but EnableBrokenCoders is
	not true, then include empty registration functions.

	* Makefile.am: Rename coders/acppfile.cpp to magick/acppfile.cpp
	and include some in-progress changes which are necessary for the
	build to still work.

2024-02-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat: G,K and Y tests started to fail
	before several months without knowing why. Do not stop. Too bad.
	Added test for HRZ format.

2024-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{rwblob.tap, rwfile.tap}: Add HRZ to sanity checks.

	* coders/hrz.c (RegisterHRZImage): Set 'seekable_stream' and
	'adjoin' correctly.

2024-02-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/hrz.c: Provide writer.
	* coders/tga.c: 32 bit TGA colormap is expected to have a valid
	alpha channel.

2024-02-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tga.c: TGA reader seems to ignore image orientation,
	fixed now.

2024-02-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jpeg/*: Update JPEG builtin library to 9f.

2024-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (FreeMagickClientData): Assure that jpeg_pixels is